--- a/common.css
+++ b/common.css
@@ -45,12 +45,25 @@ header {
 }
 
 .logo {
-    width: 60vw;
+    width: 62vw;
 }
 
-nav {
+.logo_coffee {
+    width: 220px;
+    margin-top: 20px;
+}
+
+.navbar {
+    margin-top: 20px;
+}
+
+.nav-link {
+    text-decoration: none;
     font-weight: 400;
-    display: block;
+    color: brown;
+    margin-right: 55px;
+    font-size: 20px;
+
 }
 
 .container {
@@ -60,13 +73,23 @@ nav {
 }
 
 #hero {
-    display: flex;
+    display: block;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 200px;
-    margin-top: 50px;
+    min-height: 780px;
+    margin-top: 100px;
+    background-image: url(img/first_bac.jpg);
+    background-repeat: no-repeat;
+    opacity: 30%;
+    
+}
+
+.text_craft {
+    font-size: 100px;
+    color: rgb(255, 255, 255);
+    opacity: 100%;
 }
 
 section {
