--- a/common.css
+++ b/common.css
@@ -13,15 +13,6 @@ head {
 body {
     background: #ffffff;
     font-family: Roboto;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
     display: block;
     margin: 8px;
 }
@@ -42,10 +33,12 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: #ffffff;
 }
 
 .logo {
-    width: 62vw;
+    width: 69vw;
+    padding-bottom: 5px;
 }
 
 .logo_coffee {
@@ -54,13 +47,13 @@ header {
 }
 
 .navbar {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .nav-link {
     text-decoration: none;
     font-weight: 400;
-    color: brown;
+    color: #ffd429;
     margin-right: 55px;
     font-size: 20px;
 
@@ -72,7 +65,7 @@ header {
     margin: 0 auto;
 }
 
-#hero {
+.hero {
     display: block;
     flex-direction: column;
     align-items: center;
@@ -80,16 +73,54 @@ header {
     text-align: center;
     min-height: 780px;
     margin-top: 100px;
-    background-image: url(img/first_bac.jpg);
+    background-image: url(img/first_backk.jpg);
     background-repeat: no-repeat;
-    opacity: 30%;
-    
 }
 
 .text_craft {
-    font-size: 100px;
-    color: rgb(255, 255, 255);
-    opacity: 100%;
+    font-size: 55px;
+    color: #ffd429;
+    padding-top: 220px;
+}
+
+.email-text {
+    margin-top: 30px;
+    font-size: 17px;
+    font-weight: 700;
+    color: #ffffff;
+}
+
+.form {
+    margin: 0 auto 15px;
+	display:flex; 
+	flex-direction: column;
+	align-items: center;
+	max-width: 350px;
+}
+
+.btn {
+    font-size: 18px;
+    font-weight: 700;
+	border: 0;
+	cursor: pointer;
+	margin: 0 auto;
+    background: #ffd429;
+	color: #494949;
+	display: block;
+	width: 205px;
+	padding: 15px 0;
+	text-align: center;
+	text-decoration: none;
+	transition: all 0.5s ease;
+}
+
+.email {
+    border: 1px solid #bbbbbb;
+	width: 350px;
+	font-size: 15px;
+	height: 45px;
+	padding: 23px;
+	margin: 10px 0px 14px 0px;
 }
 
 section {
